--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+/* Root css configuration */
+:root {
+  box-sizing: border-box;
+  --color-primary: #633490;
+  font-family: "geomanist" !important;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Importing main font */
+@font-face {
+  font-family: "geomanist";
+  src: local("geomanist"),
+    url(./Geomanist-Regular&Italic/Webfont/Geomanist-Regular-Webfont/geomanist-regular-webfont.woff)
+      format("woff");
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Custom nav brand css */
+.navbar-brand {
+  padding-left: 8vw !important;
+  padding-top: 4vh !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Request a demo button css */
+.primary-button {
+  background-color: var(--color-primary) !important;
+  border-color: var(--color-primary) !important;
+  margin-right: 8vw !important;
+  margin-top: 4vh !important;
+  padding-right: 2vw !important;
+  padding-left: 2vw !important;
+  border-top-right-radius: 50px !important;
+  border-bottom-right-radius: 50px !important;
+  border-top-left-radius: 50px !important;
+  border-bottom-left-radius: 50px !important;
+  box-shadow: 0px 16px 20px #795b964d;
+  opacity: 1;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Footer css */
+.footer {
+  max-width: 100vw !important;
+  min-height: 40vh;
+  background: transparent
+    linear-gradient(
+      303deg,
+      #9656a2 0%,
+      var(--unnamed-color-633490) 27%,
+      #34194d 100%
+    )
+    0% 0% no-repeat padding-box;
+  background: transparent
+    linear-gradient(303deg, #9656a2 0%, #633490 27%, #34194d 100%) 0% 0%
+    no-repeat padding-box;
+  opacity: 1;
 }
