--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,79 @@
   --color-primary: #633490;
   font-family: "geomanist" !important;
 }
+/* Elements custom */
+h1 {
+  font-size: 140px !important;
+  color: #a75fb4 !important;
+}
+h2 {
+  font-size: 70px !important;
+  color: #444445 !important;
+}
+h3 {
+  font-size: 45px !important;
+  color: #c7c5c7 !important;
+}
+h4 {
+  font-size: 40px !important;
+  color: #444445 !important;
+}
+h5 {
+  font-size: 40 !important;
+  text-transform: uppercase;
+  color: #444445 !important;
+}
+h6 {
+  font-size: 22px !important;
+  color: #444445 !important;
+}
+.p1 {
+  font-size: 18px !important;
+  color: #444445 !important;
+}
+.p2 {
+  font-size: 18px !important;
+  color: #707070 !important;
+}
+.p3 {
+  font-size: 18px !important;
+  color: #444445 !important;
+}
+.p4 {
+  font-size: 16px !important;
+  color: #444445 !important;
+}
+label {
+  display: block !important;
+}
+input,textarea {
+  border: none;
+  border-bottom: 2px solid #707070;
+  width: 100% !important;
+}
+textarea{
+  resize: none !important;
+}
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  font-size: 14px;
+  color: #c7c5c7;
+}
+::-moz-placeholder {
+  /* Firefox 19+ */
+  font-size: 14px;
+  color: #c7c5c7;
+}
+:-ms-input-placeholder {
+  /* IE 10+ */
+  font-size: 14px;
+  color: #c7c5c7;
+}
+:-moz-placeholder {
+  /* Firefox 18- */
+  font-size: 14px;
+  color: #c7c5c7;
+}
 /* Importing main font */
 @font-face {
   font-family: "geomanist";
@@ -95,4 +168,11 @@
 }
 .margin-top-56 {
   margin-top: 48px !important;
+}
+.margin-top-80 {
+  margin-top: 80px !important;
+}
+/* Utilities */
+.bold {
+  font-weight: bold;
 }
