--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
 h1 {
   font-size: 140px !important;
   color: #a75fb4 !important;
+  font-weight: 100 !important;
 }
 .h1-after::after {
   content: url(/cursor%201.png);
@@ -37,7 +38,7 @@ h4 {
   color: #444445 !important;
 }
 h5 {
-  font-size: 40 !important;
+  font-size: 40px !important;
   text-transform: uppercase;
   color: #444445 !important;
 }
@@ -60,6 +61,14 @@ h6 {
 .p4 {
   font-size: 16px !important;
   color: #444445 !important;
+}
+.gradient-header {
+  background: transparent
+    linear-gradient(270deg, #562783 0%, #7a29c7 56%, #904ada 100%) 0% 0%
+    no-repeat padding-box;
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
 }
 label {
   display: block !important;
@@ -191,8 +200,20 @@ hr {
   margin-top: 80px !important;
 }
 /* Utilities */
+.contain-65 {
+  width: 65% !important;
+}
+.contain-90 {
+  width: 90% !important;
+}
+.letter-space-36 {
+  letter-spacing: 0.36px;
+}
 .bold {
   font-weight: bold;
+}
+.bolder {
+  font-weight: bolder;
 }
 .contact-btn {
   background-color: #ffffff !important;
@@ -217,12 +238,9 @@ hr {
 /* Media Queries */
 @media screen and (max-width: 768px) {
   h1 {
-    font-size: 30px !important;
+    font-size: 50px !important;
   }
   .h1-after::after {
-    content: url(/cursor%201.png);
-    margin-left: 2vw;
-    height: 30px;
-    object-fit: cover;
+    content: "";
   }
 }
