Logo for contact page changed , removed off white color from highlight in navbar

--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,8 @@ textarea {
     90deg,
     rgba(239, 204, 86, 1) 0%,
     rgba(239, 204, 86, 1) 45%,
-    rgba(248, 248, 248, 1) 35%
+    #ffffff 45%,
+    #ffffff 100%
   );
   border-image-slice: 1;
 }
