FAQ and contact mobile responsive done

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ h3 {
 }
 h4 {
   font-size: 40px !important;
-  color: #632E96 !important;
+  color: #632e96 !important;
 }
 h5 {
   font-size: 40px !important;
@@ -80,14 +80,19 @@ label {
 input,
 textarea {
   border: none;
-  border-bottom: 2px solid #707070;
+  border-bottom: 2px solid #c7c5c7;
   width: 100% !important;
 }
 input:focus,
 textarea:focus {
   outline: none;
   border: none;
-  border-bottom: 2px solid #000000 !important;
+  border-bottom: 2px solid #efcc56 !important;
+}
+input:invalid {
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #ed5a6b !important;
 }
 textarea {
   resize: none !important;
@@ -136,6 +141,30 @@ textarea {
     #ffffff 100%
   );
   border-image-slice: 1;
+}
+.active-span-header {
+  padding-top: 1vh !important;
+  box-sizing: content-box;
+  border-top: 4px solid;
+  border-image-source: linear-gradient(
+    90deg,
+    rgba(239, 204, 86, 1) 0%,
+    rgba(239, 204, 86, 1) 20%,
+    #ffffff 20%,
+    #ffffff 100%
+  );
+  border-image-slice: 1;
+}
+.super {
+  display: inline-block;
+  position: absolute;
+  margin-top: -20px !important;
+}
+.super::before {
+  content: "<";
+  color: #707070 !important;
+  font-size: larger;
+  font-weight: bolder;
 }
 .navbar-toggler-icon {
   background-image: url("/Hamburger icon.svg") !important;
@@ -208,6 +237,10 @@ textarea {
 .margin-top-80 {
   margin-top: 80px !important;
 }
+.padding-horizontal-80 {
+  padding-left: 80px !important;
+  padding-right: 80px !important;
+}
 /* Utilities */
 .contain-65 {
   width: 65% !important;
@@ -273,6 +306,10 @@ textarea {
   font-size: 45px;
   margin-top: 8vh !important;
 }
+/* Accordion */
+.card-header {
+  background-color: #ffffff !important;
+}
 /* Media Queries */
 @media screen and (max-width: 768px) {
   h1 {
@@ -280,6 +317,9 @@ textarea {
   }
   .h1-after::after {
     content: "";
+  }
+  h4 {
+    font-size: 24px !important;
   }
   .contain-65 {
     width: 95% !important;
@@ -289,5 +329,14 @@ textarea {
   }
   .contain-90 {
     width: 95% !important;
+  }
+  .margin-top-120 {
+    margin-top: 32px !important;
+  }
+  .margin-top-80 {
+    margin-top: 28px !important;
+  }
+  .margin-top-56 {
+    margin-top: 20px !important;
   }
 }
