--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@
 body {
   font-family: "geomanist" !important;
 }
+.black-text {
+  color: black !important;
+}
 img.gif {
   object-fit: cover !important;
   width: 100%;
@@ -23,6 +26,14 @@ h1 {
   font-size: 140px !important;
   color: #a75fb4 !important;
   font-weight: 100 !important;
+}
+h1.landing {
+  font-size: 64px !important;
+  font-weight: lighter !important;
+}
+h1.landing-small {
+  font-size: 36px !important;
+  font-weight: lighter !important;
 }
 .h1-after::after {
   content: url(/cursor%201.png);
@@ -237,6 +248,18 @@ textarea {
 .margin-top-80 {
   margin-top: 80px !important;
 }
+.margin-top-169 {
+  margin-top: 169px !important;
+}
+.margin-bottom-199 {
+  margin-bottom: 199px !important;
+}
+.margin-left-14 {
+  margin-left: 14px !important;
+}
+.padding-left-152 {
+  padding-left: 152px !important;
+}
 .padding-horizontal-80 {
   padding-left: 80px !important;
   padding-right: 80px !important;
@@ -245,11 +268,17 @@ textarea {
 .contain-65 {
   width: 65% !important;
 }
+.contain-75 {
+  width: 75% !important;
+}
 .contain-50 {
   width: 50% !important;
 }
 .contain-90 {
   width: 90% !important;
+}
+.contain-full {
+  max-width: 98.5% !important;
 }
 .letter-space-36 {
   letter-spacing: 0.36px;
@@ -325,7 +354,7 @@ textarea {
     width: 95% !important;
   }
   .contain-50 {
-    width: 95% !important;
+    width: 98% !important;
   }
   .contain-90 {
     width: 95% !important;
@@ -338,5 +367,10 @@ textarea {
   }
   .margin-top-56 {
     margin-top: 20px !important;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .contain-75 {
+    width: 85% !important;
   }
 }
