Desktop site done need review

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,14 @@ img.gif {
   object-fit: cover !important;
   width: 100%;
 }
+img.dimension-80 {
+  object-fit: cover !important;
+  height: 80%;
+}
+img.dimension-60 {
+  object-fit: cover !important;
+  height: 60%;
+}
 /* Elements custom */
 h1 {
   font-size: 140px !important;
@@ -254,6 +262,9 @@ textarea {
 .margin-bottom-199 {
   margin-bottom: 199px !important;
 }
+.margin-bottom-100 {
+  margin-bottom: 100px !important;
+}
 .margin-left-14 {
   margin-left: 14px !important;
 }
@@ -265,6 +276,9 @@ textarea {
   padding-right: 80px !important;
 }
 /* Utilities */
+.full-height {
+  height: 100%;
+}
 .contain-65 {
   width: 65% !important;
 }
@@ -357,7 +371,7 @@ textarea {
     width: 98% !important;
   }
   .contain-90 {
-    width: 95% !important;
+    width: 98% !important;
   }
   .margin-top-120 {
     margin-top: 32px !important;
@@ -372,5 +386,13 @@ textarea {
 @media screen and (max-width: 1000px) {
   .contain-75 {
     width: 85% !important;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .contain-90 {
+    width: 95% !important;
+  }
+  .contain-50 {
+    width: 65% !important;
   }
 }
