--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,9 @@ textarea {
     #ffffff 100%
   );
   border-image-slice: 1;
+  border-left-width: 0px !important;
+  border-right-width: 0px !important;
+  border-bottom-width: 0px !important;
 }
 .active-span-header {
   padding-top: 1vh !important;
@@ -173,6 +176,9 @@ textarea {
     #ffffff 100%
   );
   border-image-slice: 1;
+  border-left-width: 0px !important;
+  border-right-width: 0px !important;
+  border-bottom-width: 0px !important;
 }
 .super {
   display: inline-block;
@@ -362,6 +368,19 @@ textarea {
   border-right: none !important;
 }
 /* Media Queries */
+@media screen and (max-width: 1100px) {
+  .contain-90 {
+    width: 95% !important;
+  }
+  .contain-50 {
+    width: 65% !important;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .contain-75 {
+    width: 85% !important;
+  }
+}
 @media screen and (max-width: 768px) {
   h1 {
     font-size: 50px !important;
@@ -376,7 +395,7 @@ textarea {
     width: 95% !important;
   }
   .contain-50 {
-    width: 98% !important;
+    width: 99% !important;
   }
   .contain-90 {
     width: 98% !important;
@@ -391,16 +410,8 @@ textarea {
     margin-top: 20px !important;
   }
 }
-@media screen and (max-width: 1000px) {
-  .contain-75 {
-    width: 85% !important;
-  }
-}
-@media screen and (max-width: 1100px) {
-  .contain-90 {
-    width: 95% !important;
-  }
-  .contain-50 {
-    width: 65% !important;
+@media screen and (min-width: 576px) {
+  .section-header.margin-top-120 > .container {
+    max-width: 90vw !important;
   }
 }
