--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,12 @@ textarea {
   color: #c7c5c7;
 }
 /* Custom nav bar css */
+.MuiDrawer-paper {
+  width: 70% !important;
+  background: transparent linear-gradient(198deg, #ffffff 40%, #c7c5c7 100%) 0%
+    0% no-repeat padding-box;
+  opacity: 1;
+}
 .navbar-brand {
   padding-left: 8vw !important;
   padding-top: 2vh !important;
@@ -251,7 +257,10 @@ textarea {
 .lift-me-up {
   margin-top: -10vh;
 }
-/* Custom margin */
+.push-me-down {
+  margin-top: 1vh;
+}
+/* Custom margin in px*/
 .margin-top-36 {
   margin-top: 36px !important;
 }
@@ -285,7 +294,7 @@ textarea {
 .margin-bottom-8 {
   margin-bottom: 8px !important;
 }
-.margin-bottom-4{
+.margin-bottom-4 {
   margin-bottom: 4px !important;
 }
 .margin-left-14 {
@@ -299,9 +308,28 @@ textarea {
   padding-left: 80px !important;
   padding-right: 80px !important;
 }
+/* Custom margin in percentage */
+.pmargin-top-10 {
+  margin-top: 10vh !important;
+}
+.pmargin-top-5 {
+  margin-top: 5vh !important;
+}
+.pmargin-top-20 {
+  margin-top: 20vh !important;
+}
 /* Utilities */
 .full-height {
   height: 100%;
+}
+.full-width {
+  width: 100% !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+.rule-below {
+  padding-bottom: 8px;
+  border-bottom: 1px solid #c7c5c7 !important;
 }
 .contain-65 {
   width: 65% !important;
